Fix cards spacing

--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -102,6 +102,7 @@
     &__headline {
 
       padding-bottom: 6px;
+      padding-top: 32px;
 
       h3 {
         clear: both;
@@ -120,7 +121,7 @@
 
     &__content {
 
-      padding-bottom: 3px;
+      padding-bottom: 35px;
 
       p {
         clear: both;
